# android_system_security

./: OWNERS
diced/: Android.bp  OWNERS  TEST_MAPPING
diced/aidl/: Android.bp
diced/src/: lib.rs  (+11 more)
fsverity/: Android.bp  TEST_MAPPING  fsverity_manifest_generator.py
fsverity_init/: Android.bp  flags.aconfig  fsverity_init.cpp  main.cpp
identity/: Android.bp  Credential.cpp  Credential.h  CredentialData.cpp  CredentialData.h  CredentialStore.cpp  CredentialStore.h  RemotelyProvisionedKey.cpp  RemotelyProvisionedKey.h  WritableCredential.cpp  WritableCredential.h  main.cpp
keystore/: Android.bp  key_store_service.cpp  keymaster_enforcement.cpp  keystore.cpp  keystore_attestation_id.cpp  keystore_cli_v2.cpp  keystore_keymaster_enforcement.h
keystore-engine/: Android.bp  eng_keystore.cpp  keystore2_engine.cpp
keystore2/: Android.bp  OWNERS  TEST_MAPPING  android.system.keystore2-service.xml  keystore2.rc  rustfmt.toml
mls/mls-rs-crypto-boringssl/: Android.bp  Cargo.toml  OWNERS  cargo_embargo.json
mls/mls-rs-crypto-boringssl/src/: aead.rs  ecdh.rs  eddsa.rs  hash.rs  hpke.rs  kdf.rs  lib.rs  test_helpers.rs
ondevice-signing/: Android.bp  CertUtils.cpp  CertUtils.h  FakeCompOs.cpp  FakeCompOs.h  KeystoreHmacKey.cpp  KeystoreHmacKey.h  KeystoreKey.cpp  OWNERS  StatsReporter.cpp  StatsReporter.h  VerityUtils.cpp  VerityUtils.h  odsign.rc  odsign_main.cpp
prng_seeder/: Android.bp  OWNERS
provisioner/: Android.bp  TEST_MAPPING  rkp_factory_extraction_lib.cpp  rkp_factory_extraction_lib.h  rkp_factory_extraction_lib_test.cpp  rkp_factory_extraction_tool.cpp
(+175 files in other folders)
